<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/gym">

    <Spinner
        android:id="@+id/querylist_spinner"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@android:color/background_light"
        android:entries="@array/query_array"
        android:prompt="@string/query_prompt" />

    <Button
        android:id="@+id/showresult_btn"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/showresult_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/background_light">

    </ScrollView>

    <Button
        android:id="@+id/goBack_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/goBack_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />
</LinearLayout>