<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/gym">

    <TextView
        android:id="@+id/machineTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="50dp"
        android:text="@string/machinename"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/machine_nm"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light" />

    <Button
        android:id="@+id/machineshow"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/showresult_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/background_light">

    </ScrollView>

    <Button
        android:id="@+id/machineReturn"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/goBack_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />
</LinearLayout>