<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gym"
    android:weightSum="1">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.13">
        <!--android:gravity="center"!-->

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.64"
            android:gravity="center"
            android:text="Welcome!"
            android:textColor="#f5f5f5"
            android:textSize="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text=" "
            android:layout_marginTop="10dp"
            android:textColor="#f5f5f5"
            android:id="@+id/userNameShow"
            android:gravity="center_horizontal" />

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button10"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector"
            android:text="@string/one"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button11"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector"
            android:text="@string/two"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button12"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/three"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_selector"
        android:text="@string/four"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>